# dummy-jni-opencv-tflite

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
app/src/main/java/com/example/hellojni/: HelloJni.kt
